# Research-Rag-Ui

./: .env.example  .env.local  .gitignore  CLEANUP_REPORT.md  CLERK_SETUP.md  DEPLOY.md  LANGCHAIN_COMPLIANCE.md  README.md  requirements.txt  run-dev.bat  start.ps1  stop-dev.bat  supabase_conversations.sql  supabase_migration.sql
multi_agent_search/: .dockerignore  .gitignore  ARCHITECTURE.md  Dockerfile  HUMAN_IN_THE_LOOP_PLAN.md  README.md  TECHNICAL_SHOWCASE.md  agent.py  langgraph.json  pyproject.toml  requirements.txt  supabase_billing.sql
multi_agent_search/copilotkit-ui/: middleware.ts  package-lock.json  package.json
multi_agent_search/copilotkit-ui/app/: layout.tsx  page.tsx
multi_agent_search/copilotkit-ui/app/chat/: page.tsx
multi_agent_search/copilotkit-ui/app/components/: AppShell.tsx  ChunkCard.tsx  ChunkExplorer.tsx  CopilotChatInterface.tsx  DeepResearchPanel.tsx  RAGFileUpload.tsx  SourceInspector.tsx
multi_agent_search/copilotkit-ui/app/providers/: CopilotKitProvider.tsx
multi_agent_search/copilotkit-ui/app/types/: agent.ts
multi_agent_search/copilotkit-ui/types/: rag.ts
multi_agent_search/src/: __init__.py  models.py  simple_copilot_backend.py
multi_agent_search/src/agents/: agentic_chunker.py  deep_graph.py  icerik.md  log.md  main_agent.py  rag_agent.py  simple_agent.py  çıktı.md
multi_agent_search/src/agents/deep_research/: agent.py  configuration.py  models.py  (+5 more)
multi_agent_search/src/memory/: __init__.py  hitl_approval.py  langgraph_store.py  supabase_memory.py
multi_agent_search/src/models/: __init__.py  rag_models.py
(+47 files in other folders)
