[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multi_agent_search"
version = "0.1.0"
description = "Multi Agent Search with LangGraph"
authors = [{name = "Hamdi Ozkurt", email = "your@email.com"}]
dependencies = [
    "langgraph",
    "langchain",
    "langchain-google-genai",
    "langchain-groq",
    "sh",
    "copilotkit"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
